--- a/css/styles.css
+++ b/css/styles.css
@@ -82,12 +82,16 @@
   }
 }
 
+:root {
+  --text-color: #f8f9fa;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   background-color: #181818;
-  color: #f8f9fa;
+  color: var(--text-color);
 }
 
 #header {
@@ -101,19 +105,15 @@ body {
   margin: 0;
   padding: 0;
   font-size: 24px;
-  color: #f8f9fa;
 }
 
 #content {
   padding: 20px;
 }
 
-#content h2 {
-  color: #f8f9fa;
-}
-
+#content h2,
 #content p {
-  color: #f8f9fa;
+  color: var(--text-color);
 }
 
 #footer {
@@ -121,7 +121,7 @@ body {
   border-top: 1px solid #383838;
   padding: 10px;
   text-align: center;
-  color: #f8f9fa;
+  color: var(--text-color);
 }
 
 body {
